deploy/apps/central-tx-atx-f01/default/dev/factory/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webmodule
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webmodule
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: webmodule
    spec:
      nodeSelector:
        "beta.kubernetes.io/os": linux
      containers:
      - name: webmodule
        image: intelligentedge/webmodule:0.27.0-amd64
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: webmodule-np
  namespace: default
spec:
  type: ClusterIP
  ports:
  - port: 8000
  selector:
    app: webmodule
